vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_match_stmt.vv
fn main() {
	n := 1
	match n {
		1 {
			$embed_file(@FILE)
		}
		else {}
	}
}
